--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  Hello world
+  <form name="form1" action = "https://fe.it-academy.by/TestForm.php"></form>
+  <form name="form2" action = "https://fe.it-academy.by/TestForm.php"></form> 
+  <script src="script.js"></script>
 </body>
 
 </html>
-<!--  -->
